# MLOPS_3

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  eda.ipynb  eda.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
notebooks/: eda_analysis.ipynb
src/: eda.py
