[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-default-analysis"
version = "0.1.0"
description = "Exploratory Data Analysis of Credit Default Dataset"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "pandas>=2.1.4",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.1",
    "scikit-learn>=1.3.2"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"